--- a/estilos/style.css
+++ b/estilos/style.css
@@ -57,7 +57,7 @@ header > h1 {
 header > p {
     color: white;
     font-family: var(--fonte-padrao);
-    font-size: 1.2em;
+    font-size: 1em;
     max-width: 500px;
     margin: auto;
     padding: 0px 10px 30px 10px;
@@ -72,7 +72,7 @@ nav {
 
 nav > a {
     color: var(--cor1);
-    padding: 10px;
+    /*padding: 10px;*/
     text-decoration: none;
     font-weight: bold;
     border-radius: 5px;
@@ -125,8 +125,7 @@ main h1 {
     font-family: var(--fonte-android);
     font-weight: normal;
     font-size: 1.8em;
-    text-align: center;
-}
+    }
 
 main h2 {
     font-family: var(--fonte-android);
@@ -174,7 +173,7 @@ aside > ul {
     list-style-position: inside;
     columns: 2;
     line-height: 28px;
-    text-indent: 14px;
+    /*text-indent: 14px;*/
     text-decoration: none;
 }
 
@@ -188,7 +187,7 @@ aside > h3 {
 }
 
 aside > p {
-    margin: 14px;
+    margin: 10px;
 }
 
 footer {
