--- a/estilos/style.css
+++ b/estilos/style.css
@@ -125,6 +125,7 @@ main h1 {
     font-family: var(--fonte-android);
     font-weight: normal;
     font-size: 1.8em;
+    text-align: center;
     }
 
 main h2 {
